--- a/django/djangononrelsample2/views/templates/unittests.html
+++ b/django/djangononrelsample2/views/templates/unittests.html
@@ -22,7 +22,7 @@
 		      <h1 class="pagetitle">Unittests</h1>
 							
 		      <p>&nbsp;</p>
-		      <p>See the unittests.py file in the github repo.</p>
+		      <p>See the unittests.py file in the github repo <a href="https://github.com/raychorn/knowu" target="_blank">https://github.com/raychorn/knowu</a>.</p>
 		  </div>
                 </td>
               </tr>
